[gd_scene load_steps=11 format=3 uid="uid://c6biv2mqykjcg"]

[ext_resource type="Script" path="res://src/entities/obstacles/arrow_shooter/arrow.gd" id="1_6bkri"]
[ext_resource type="PackedScene" uid="uid://cnm077r8cak41" path="res://src/common/components/hurtbox/hurtbox_component.tscn" id="2_2u0hl"]
[ext_resource type="PackedScene" uid="uid://cvsgunn02v50s" path="res://src/common/components/hitbox/hitbox_component.tscn" id="3_7xiyr"]
[ext_resource type="Texture2D" uid="uid://62trp8v03f0d" path="res://assets/obstacles/arrow_spritesheet.png" id="5_kx20u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_864ow"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036uj"]
size = Vector2(6, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe6aw"]
atlas = ExtResource("5_kx20u")
region = Rect2(0, 0, 14, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn1sn"]
atlas = ExtResource("5_kx20u")
region = Rect2(14, 0, 14, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_1s2k5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe6aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn1sn")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpgf6"]
size = Vector2(6, 2)

[node name="Arrow" type="Area2D"]
collision_layer = 0
script = ExtResource("1_6bkri")

[node name="HurtboxComponent" parent="." instance=ExtResource("2_2u0hl")]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("RectangleShape2D_864ow")

[node name="HitboxComponent" parent="." instance=ExtResource("3_7xiyr")]
collision_mask = 2

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_036uj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_1s2k5")
autoplay = "default"
frame_progress = 0.626173

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_tpgf6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
